--- a/ks.html
+++ b/ks.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/uikit.css">
     <style>
-        /*#main{
-            background: #000 url("imgs/paper001.jpg");
-            padding: 1em;
-        }*/
+        #main{
+            /*background: #000 url("imgs/paper001.jpg");*/
+            margin: 1em 0;
+            padding: 0.5em 0;
+        }
         @media print {
             #form-div {
                 display: none;
