--- a/ks.html
+++ b/ks.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>口算</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/uikit.css">
     <link rel="stylesheet" href="css/ks.css">
